// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SortSection > matches snapshot when collapsed 1`] = `
<DocumentFragment>
  <div
    class="w-full"
    data-orientation="vertical"
  >
    <div
      class="border-b"
      data-orientation="vertical"
      data-state="closed"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="closed"
      >
        <button
          aria-controls="radix-:r1:"
          aria-expanded="false"
          class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="closed"
          id="radix-:r0:"
          type="button"
        >
          <p>
            Sort by 
            <span
              class="opacity-60"
            >
              (Display name MOST_POPULAR)
            </span>
          </p>
          <svg
            class="lucide lucide-chevron-down h-4 w-4 shrink-0 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r0:"
        class="max-h-40 overflow-y-auto text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
        data-orientation="vertical"
        data-state="closed"
        hidden=""
        id="radix-:r1:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SortSection > matches snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="w-full"
    data-orientation="vertical"
  >
    <div
      class="border-b"
      data-orientation="vertical"
      data-state="open"
    >
      <h3
        class="flex"
        data-orientation="vertical"
        data-state="open"
      >
        <button
          aria-controls="radix-:r3:"
          aria-expanded="true"
          class="flex flex-1 items-center justify-between py-4 font-medium transition-all hover:underline [&[data-state=open]>svg]:rotate-180"
          data-orientation="vertical"
          data-radix-collection-item=""
          data-state="open"
          id="radix-:r2:"
          type="button"
        >
          <p>
            Sort by 
            <span
              class="opacity-60"
            >
              (Display name MOST_POPULAR)
            </span>
          </p>
          <svg
            class="lucide lucide-chevron-down h-4 w-4 shrink-0 transition-transform duration-200"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </h3>
      <div
        aria-labelledby="radix-:r2:"
        class="max-h-40 overflow-y-auto text-sm transition-all data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down"
        data-orientation="vertical"
        data-state="open"
        id="radix-:r3:"
        role="region"
        style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
      >
        <div
          class="pb-4 pt-0"
        >
          <div
            aria-required="false"
            class="grid gap-2"
            dir="ltr"
            role="radiogroup"
            style="outline: none;"
            tabindex="0"
          >
            <ul
              class="grid gap-2"
            >
              <li
                class="flex items-center space-x-2"
              >
                <button
                  aria-checked="true"
                  aria-label="MOST_POPULAR"
                  class="aspect-square h-4 w-4 rounded-full border border-primary text-primary ring-offset-background focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
                  data-radix-collection-item=""
                  data-state="checked"
                  id="MOST_POPULAR"
                  role="radio"
                  tabindex="-1"
                  type="button"
                  value="MOST_POPULAR"
                >
                  <span
                    class="flex items-center justify-center"
                    data-state="checked"
                  >
                    <svg
                      class="lucide lucide-circle h-2.5 w-2.5 fill-current text-current"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                    </svg>
                  </span>
                </button>
                <label
                  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 hover:cursor-pointer"
                  for="MOST_POPULAR"
                >
                  Display name MOST_POPULAR
                </label>
              </li>
              <li
                class="flex items-center space-x-2"
              >
                <button
                  aria-checked="false"
                  aria-label="NEWEST_FIRST"
                  class="aspect-square h-4 w-4 rounded-full border border-primary text-primary ring-offset-background focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
                  data-radix-collection-item=""
                  data-state="unchecked"
                  id="NEWEST_FIRST"
                  role="radio"
                  tabindex="-1"
                  type="button"
                  value="NEWEST_FIRST"
                />
                <label
                  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 hover:cursor-pointer"
                  for="NEWEST_FIRST"
                >
                  Display name NEWEST_FIRST
                </label>
              </li>
              <li
                class="flex items-center space-x-2"
              >
                <button
                  aria-checked="false"
                  aria-label="OLDEST_FIRST"
                  class="aspect-square h-4 w-4 rounded-full border border-primary text-primary ring-offset-background focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
                  data-radix-collection-item=""
                  data-state="unchecked"
                  id="OLDEST_FIRST"
                  role="radio"
                  tabindex="-1"
                  type="button"
                  value="OLDEST_FIRST"
                />
                <label
                  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 hover:cursor-pointer"
                  for="OLDEST_FIRST"
                >
                  Display name OLDEST_FIRST
                </label>
              </li>
              <li
                class="flex items-center space-x-2"
              >
                <button
                  aria-checked="false"
                  aria-label="BEST_RATED"
                  class="aspect-square h-4 w-4 rounded-full border border-primary text-primary ring-offset-background focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
                  data-radix-collection-item=""
                  data-state="unchecked"
                  id="BEST_RATED"
                  role="radio"
                  tabindex="-1"
                  type="button"
                  value="BEST_RATED"
                />
                <label
                  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 hover:cursor-pointer"
                  for="BEST_RATED"
                >
                  Display name BEST_RATED
                </label>
              </li>
              <li
                class="flex items-center space-x-2"
              >
                <button
                  aria-checked="false"
                  aria-label="WORST_RATED"
                  class="aspect-square h-4 w-4 rounded-full border border-primary text-primary ring-offset-background focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
                  data-radix-collection-item=""
                  data-state="unchecked"
                  id="WORST_RATED"
                  role="radio"
                  tabindex="-1"
                  type="button"
                  value="WORST_RATED"
                />
                <label
                  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 hover:cursor-pointer"
                  for="WORST_RATED"
                >
                  Display name WORST_RATED
                </label>
              </li>
              <li
                class="flex items-center space-x-2"
              >
                <button
                  aria-checked="false"
                  aria-label="LONGEST_RUNTIME"
                  class="aspect-square h-4 w-4 rounded-full border border-primary text-primary ring-offset-background focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
                  data-radix-collection-item=""
                  data-state="unchecked"
                  id="LONGEST_RUNTIME"
                  role="radio"
                  tabindex="-1"
                  type="button"
                  value="LONGEST_RUNTIME"
                />
                <label
                  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 hover:cursor-pointer"
                  for="LONGEST_RUNTIME"
                >
                  Display name LONGEST_RUNTIME
                </label>
              </li>
              <li
                class="flex items-center space-x-2"
              >
                <button
                  aria-checked="false"
                  aria-label="SHORTEST_RUNTIME"
                  class="aspect-square h-4 w-4 rounded-full border border-primary text-primary ring-offset-background focus:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
                  data-radix-collection-item=""
                  data-state="unchecked"
                  id="SHORTEST_RUNTIME"
                  role="radio"
                  tabindex="-1"
                  type="button"
                  value="SHORTEST_RUNTIME"
                />
                <label
                  class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 hover:cursor-pointer"
                  for="SHORTEST_RUNTIME"
                >
                  Display name SHORTEST_RUNTIME
                </label>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
